--- a/ui-dashboard-001/nbproject/project.properties
+++ b/ui-dashboard-001/nbproject/project.properties
@@ -35,13 +35,47 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ui-dashboard-001
 endorsed.classpath=
 excludes=
+file.reference.commons-codec-1.11.jar=D:\\project\\libs\\commons-codec-1.11.jar
+file.reference.commons-collections4-4.2.jar=D:\\project\\libs\\commons-collections4-4.2.jar
+file.reference.commons-compress-1.18.jar=D:\\project\\libs\\commons-compress-1.18.jar
+file.reference.flatlaf-3.1.1.jar=D:\\project\\libs\\flatlaf-3.1.1.jar
+file.reference.jasperreports-xalan-7.0.0.jar=D:\\project\\libs\\jasperreports-xalan-7.0.0.jar
+file.reference.jcalendar-1.4.jar=D:\\project\\libs\\jcalendar-1.4.jar
+file.reference.jcommon-1.0.23.jar=D:\\project\\libs\\jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19.jar=D:\\project\\libs\\jfreechart-1.0.19.jar
+file.reference.jgoodies-common-1.2.0.jar=D:\\project\\libs\\jgoodies-common-1.2.0.jar
+file.reference.jgoodies-looks-2.4.1.jar=D:\\project\\libs\\jgoodies-looks-2.4.1.jar
+file.reference.junit-4.6.jar=D:\\project\\libs\\junit-4.6.jar
 file.reference.mssql-jdbc-12.6.1.jre11.jar=E:\\file 2\\java\\sqljdbc_12.6\\enu\\jars\\mssql-jdbc-12.6.1.jre11.jar
 file.reference.mssql-jdbc-12.6.1.jre8.jar=E:\\file 2\\java\\sqljdbc_12.6\\enu\\jars\\mssql-jdbc-12.6.1.jre8.jar
+file.reference.poi-4.0.1.jar=D:\\project\\libs\\poi-4.0.1.jar
+file.reference.poi-ooxml-4.0.1.jar=D:\\project\\libs\\poi-ooxml-4.0.1.jar
+file.reference.poi-ooxml-schemas-4.0.1.jar=D:\\project\\libs\\poi-ooxml-schemas-4.0.1.jar
+file.reference.sqljdbc42.jar=D:\\project\\libs\\sqljdbc42.jar
+file.reference.xmlbeans-3.0.2.jar=D:\\project\\libs\\xmlbeans-3.0.2.jar
+file.reference.zxing.jar=D:\\project\\libs\\zxing.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mssql-jdbc-12.6.1.jre11.jar}:\
-    ${file.reference.mssql-jdbc-12.6.1.jre8.jar}
+    ${file.reference.mssql-jdbc-12.6.1.jre8.jar}:\
+    ${file.reference.commons-codec-1.11.jar}:\
+    ${file.reference.commons-collections4-4.2.jar}:\
+    ${file.reference.commons-compress-1.18.jar}:\
+    ${file.reference.flatlaf-3.1.1.jar}:\
+    ${file.reference.jasperreports-xalan-7.0.0.jar}:\
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.jgoodies-common-1.2.0.jar}:\
+    ${file.reference.jgoodies-looks-2.4.1.jar}:\
+    ${file.reference.junit-4.6.jar}:\
+    ${file.reference.poi-4.0.1.jar}:\
+    ${file.reference.poi-ooxml-4.0.1.jar}:\
+    ${file.reference.poi-ooxml-schemas-4.0.1.jar}:\
+    ${file.reference.sqljdbc42.jar}:\
+    ${file.reference.xmlbeans-3.0.2.jar}:\
+    ${file.reference.zxing.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
